<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_calculator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ag_automation_demo.CalculatorActivity"
    >

    <ViewFlipper
        android:id="@+id/vf_vehicle_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/tv_current_vehicle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/btn_edit_name"
                android:layout_centerVertical="true"
                android:textAlignment="viewStart"
                android:fontFamily="sans-serif-medium"
                android:textSize="24sp"
                />

            <Button
                android:id="@+id/btn_edit_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/edit_name"
                android:textSize="12sp"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/et_current_vehicle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/btn_save_name"
                android:layout_centerVertical="true"
                android:textAlignment="viewStart"
                android:fontFamily="sans-serif-medium"
                android:textSize="24sp"
                />

            <Button
                android:id="@+id/btn_save_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/save_name"
                />

        </RelativeLayout>

    </ViewFlipper>

    <View
        android:id="@+id/v_horiz_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/vf_vehicle_name"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="12dp"
        android:background="@android:color/darker_gray"
        />

    <RelativeLayout
        android:id="@+id/rl_calcs_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/v_horiz_divider"
        android:layout_marginBottom="18dp"
        >

        <RelativeLayout
            android:id="@+id/rl_calcs1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/v__vert_divider"
            >

            <TextView
                android:id="@+id/tv_msrp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msrp"
                android:fontFamily="sans-serif-medium"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tv_dollar_prefix_msrp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/et_msrp"
                android:fontFamily="sans-serif-medium"
                android:text="$"
                android:textSize="18sp"
                />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_msrp"
                android:layout_width="@dimen/et_calc_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_msrp"
                android:layout_toEndOf="@id/tv_dollar_prefix_msrp"
                android:inputType="number"
                app:errorEnabled="true"
                />

            <TextView
                android:id="@+id/tv_down_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_msrp"
                android:text="@string/down_payment"
                android:fontFamily="sans-serif-medium"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tv_dollar_prefix_down_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/et_down_payment"
                android:fontFamily="sans-serif-medium"
                android:text="$"
                android:textSize="18sp"
                />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_down_payment"
                android:layout_width="@dimen/et_calc_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_down_payment"
                android:layout_toEndOf="@id/tv_dollar_prefix_down_payment"
                android:inputType="number"
                android:text="5000"
                app:errorEnabled="true"
                />

        </RelativeLayout>

        <View
            android:id="@+id/v__vert_divider"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerInParent="true"
            />

        <RelativeLayout
            android:id="@+id/rl_calcs2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/v__vert_divider"
            >

            <TextView
                android:id="@+id/tv_loan_term"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loan_term"
                android:fontFamily="sans-serif-medium"
                android:textStyle="bold"
                />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_loan_term"
                android:layout_width="@dimen/et_calc_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_loan_term"
                android:inputType="number"
                android:text="36"
                app:errorEnabled="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/et_loan_term"
                android:layout_alignBaseline="@id/et_loan_term"
                android:text="@string/months_suffix"
                />

            <TextView
                android:id="@+id/tv_apr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_loan_term"
                android:text="@string/apr"
                android:fontFamily="sans-serif-medium"
                android:textStyle="bold"
                />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_apr"
                android:layout_width="@dimen/et_calc_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_apr"
                android:inputType="numberDecimal"
                android:text="2.8"
                app:errorEnabled="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/et_apr"
                android:layout_alignBaseline="@id/et_apr"
                android:text="@string/percent_suffix"
                />

        </RelativeLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_save_entry"
        android:layout_width="148dp"
        android:layout_height="60dp"
        android:layout_below="@id/rl_calcs_wrapper"
        android:layout_centerInParent="true"
        android:text="@string/save_entry"
        android:textSize="18sp"
        android:fontFamily="sans-serif-medium"
        />

</RelativeLayout>
